# linkace-sentry

./: .coveragerc  .gitignore  Dockerfile  README.md  add_test_link.py  check_links.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_api.py  test_connection.py  test_notification.py
.github/workflows/: E2E_testing.yaml  deploy.yml  test-with-allure.yml
src/: __init__.py  add_test_links.py  api.py  app.py  cache.py  checker.py  client.py  config.py  main.py  service.py  utils.py
src/api/: [build-system]  routes.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  bookmark.py
src/services/: __init__.py  bookmark_checker.py  link_checker.py  link_monitor.py  linkace_client.py  notification_service.py
src/utils/: __init__.py  validators.py
tests/: __init__.py  test_checker.py  test_linkace.py
